--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Subham Raj and I'm a <span class="typing-2"></span></div>
-                    <p>I'm persuing B.Tech in Computer Science at LPU. I am familiar with some programming languages like HTML, CSS, Python, C. Now, I am learning Java. I’m always adding new skills to my repertoire.
+                    <p>I'm persuing B.Tech in Computer Science at LPU. I am familiar with some programming languages like HTML, CSS, Python, CPP, JAVA, JavaScript. Now, I am learning Java. I’m always adding new skills to my repertoire.
                         Something that I love about software development is the opportunity to work with people from a wide range of disciplines. The software development lifecycle involves working with so many different people and departments and, as a people person and someone who loves to build new relationships, it’s great to be able to come together with other professionals who striving to same goal. I’m also eager to meet other software engineers in the area, so feel free to connect!</p>
                     <a href="#">Learn More</a>
                 </div>
