--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="home-content">
                 <div class="text-1">HELLO</div>
                 <!-- <div class="text-2">My name is <span>Subham Raj</span></div> -->
-                <div class="text-3">And I'm a <span class="typing"></span></div>
+                <div class="text-3">I'm a <span class="typing"></span></div>
                 <!-- <a href="#">Hire me</a> -->
             </div>
         </div>
