--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="pexels-jack-winbow-1559486.jpg" alt="">
+                        <div class="text">Alex John</div>
+                        <p>He is Fin-influencer and Youtuber.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="Luke-Jackson-Clark.jpg" alt="">
+                        <div class="text">Luke-Jackson-Clark</div>
+                        <p>UK based Photographer and Director of @world.shooters</p>
                     </div>
                 </div>
                 <!-- <div class="card">
@@ -189,8 +189,8 @@
                 </div> -->
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
+                        <img src="pexels-padli-pradana-937627.jpg" alt="">
+                        <div class="text">Way2Future</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
