--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="pexels-jack-winbow-1559486.jpg" alt="">
-                        <div class="text">Alex John</div>
-                        <p>He is Fin-influencer and Youtuber.</p>
+                        <img src="" alt="">
+                        <div class="text">THE FINANCIAL LADDER</div>
+                        <p>Stock Market Training Institute Finance | Courses </p>
                     </div>
                 </div>
                 <div class="card">
