--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
+                        <img src="white.png" alt="">
+                        <div class="text">Final Take</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
