--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="" alt="">
+                        <img src="images.png" alt="">
                         <div class="text">THE FINANCIAL LADDER</div>
                         <p>Stock Market Training Institute Finance | Courses </p>
                     </div>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="white.png" alt="">
+                        <img src="White.png" alt="">
                         <div class="text">Final Take</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
