--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <div class="box">
                         <img src="White.png" alt="">
                         <div class="text">Final Take</div>
-                        <p>Video Production Company | Film Making | Photography | Video Editing </p>
+                        <p>Video Production Company | Film Making | Photography </p>
                     </div>
                 </div>
             </div>
