--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Development</div>
-                        <p>Passionate web developer with expertise in creating dynamic and responsive websites, combining technical proficiency with a keen eye for design to deliver seamless user experiences. Dedicated to staying at the forefront of emerging technologies to build innovative and visually stunning online solutions.</p>
+                        <p>Innovative web developer skilled in crafting dynamic and user-friendly websites, merging technical prowess with creative design for impactful online experiences.</p>
                     </div>
                 </div>
                 <div class="card">
