--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Development</div>
-                        <p>Innovative web developer skilled in crafting dynamic and user-friendly websites, merging technical prowess with creative design for impactful online experiences.</p>
+                        <p>Versatile web developer transforming ideas into interactive, responsive websites with a focus on intuitive design and flawless user experiences.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Cloud Management</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Strategic cloud manager optimizing digital infrastructure for seamless operations, scalability, and enhanced efficiency in dynamic environments.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">App Development</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <p>Transforms concepts into high-performance mobile applications, blending technical precision with user-centric design for optimal digital experiences.</p>
                     </div>
                 </div>
                </div>
