--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
                 </div> -->
                 <div class="card">
                     <div class="box">
-                        <img src="pexels-padli-pradana-937627.jpg" alt="">
-                        <div class="text">Way2Future</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="WissenLogoDark_" alt="">
+                        <div class="text">WISSEN</div>
+                        <p>Student organisation under the aegis of Student Welfare LPU</p>
                     </div>
                 </div>
                 <div class="card">
