--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div> -->
                 <div class="card">
                     <div class="box">
-                        <img src="WissenLogoDark_.png" alt="">
+                        <img src="WissenLogoDark_.png" alt="" width="160px">
                         <div class="text">WISSEN</div>
                         <p>Student organisation under the aegis of Student Welfare LPU</p>
                     </div>
