--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div> -->
                 <div class="card">
                     <div class="box">
-                        <img src="WissenLogo.png" alt="" width="190px">
+                        <img src="WissenLogo1.png" alt="" width="190px">
                         <div class="text">WISSEN</div>
                         <p>Student organisation under the aegis of Student Welfare LPU</p>
                     </div>
