--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By Webdevelopment657 -->
+<!--Created by Subham Raj-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -87,8 +87,9 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">App Development</div>
-                        <p>Transforms concepts into high-performance mobile applications, blending technical precision with user-centric design for optimal digital experiences.</p>
+                        <div class="text">Data Science</div>
+                        
+                        <p>lorem epsum lorem epsum jhynde asdfgtt jjytt coungter okinava edemeric ghyhhb pesrihon opsum epsum noituson ngfghjfd fghun gttfgg konfuj optfin epsum.</p>
                     </div>
                 </div>
                </div>
