--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">selfsubhamraj@gmail.com</div>
+                                <div class="sub-title">work.subhamraj@gmail.com</div>
                             </div>
                         </div>
                         <div class="row">
