--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
                         </div>
                         <div class="line java"></div>
                     </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>R Programming</span>
+                            <span>1%</span>
+                        </div>
+                        <div class="line r"></div>
+                    </div>
                 </div>
             </div>
         </div>
