--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Subham Raj and I'm a <span class="typing-2"></span></div>
-                    <p>I'm persuing B.Tech in Computer Science at LPU. I am familiar with some programming languages like HTML, CSS, Python, CPP, JAVA, JavaScript. Now, I am learning Java. I’m always adding new skills to my repertoire.
-                        Something that I love about software development is the opportunity to work with people from a wide range of disciplines. The software development lifecycle involves working with so many different people and departments and, as a people person and someone who loves to build new relationships, it’s great to be able to come together with other professionals who striving to same goal. I’m also eager to meet other software engineers in the area, so feel free to connect!</p>
+                    <p>I'm persuing B.Tech in Computer Science at LPU. I am familiar with some programming languages like HTML, CSS, Python, CPP, JAVA, JavaScript. Now, I am learning Java and R Programming. I’m always adding new skills to my repertoire.
+                        Something that I love about software engineering is the opportunity to work with people from a wide range of disciplines. The software engineering lifecycle involves working with so many different people and departments and, as a people person and someone who loves to build new relationships, it’s great to be able to come together with other professionals who striving to same goal. I’m also eager to meet other software engineers in the area, so feel free to connect!</p>
                     <a href="#">Learn More</a>
                 </div>
             </div>
@@ -68,20 +68,20 @@
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My Services</h2>
+            <h2 class="title">My Expertise</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Development</div>
+                        <div class="text">Front End WebDev</div>
                         <p>Versatile web developer transforming ideas into interactive, responsive websites with a focus on intuitive design and flawless user experiences.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Cloud Management</div>
-                        <p>Strategic cloud manager optimizing digital infrastructure for seamless operations, scalability, and enhanced efficiency in dynamic environments.</p>
+                        <div class="text">Microsoft Power BI</div>
+                        <p>Strengthened data visualization and analysis skills through Microsoft Power BI Professional Certificate for insightful analytics.</p>
                     </div>
                 </div>
                 <div class="card">
