--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <i class="fas fa-code"></i>
                         <div class="text">Data Science</div>
                         
-                        <p>lorem epsum lorem epsum jhynde asdfgtt jjytt coungter okinava edemeric ghyhhb pesrihon opsum epsum noituson ngfghjfd fghun gttfgg konfuj optfin epsum.</p>
+                        <p>Engaged in the process of acquiring proficiency in data science, actively exploring its diverse facets, methodologies, and real-world applications.</p>
                     </div>
                 </div>
                </div>
