--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="home-content">
                 <div class="text-1">HELLO</div>
                 <!-- <div class="text-2">My name is <span>Subham Raj</span></div> -->
-                <div class="text-3">I'm a <span class="typing"></span></div>
+                <div class="text-3">I'm <span class="typing"></span></div>
                 <!-- <a href="#">Hire me</a> -->
             </div>
         </div>
@@ -56,7 +56,7 @@
                     <img src="3d-portrait-businessman_23-2150793877.avif" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Subham Raj and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Subham Raj and I'm <span class="typing-2"></span></div>
                     <p>I'm persuing B.Tech in Computer Science at LPU. I am familiar with some programming languages like HTML, CSS, Python, CPP, JAVA, JavaScript. Now, I am learning Java and R Programming. I’m always adding new skills to my repertoire.
                         Something that I love about software engineering is the opportunity to work with people from a wide range of disciplines. The software engineering lifecycle involves working with so many different people and departments and, as a people person and someone who loves to build new relationships, it’s great to be able to come together with other professionals who striving to same goal. I’m also eager to meet other software engineers in the area, so feel free to connect!</p>
                     <a href="#">Learn More</a>
@@ -216,7 +216,7 @@
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact Us</h2>
+            <h2 class="title">Contact Me</h2>
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
