--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Microsoft Power BI</div>
-                        <p>Data science enthusiast mastering Power BI for advanced data visualization and analysis, gaining hands-on expertise and unlocking the full potential of Power BI, Microsoft's powerful business analytics tool</p>
+                        <p>Data science enthusiast Learning Power BI for advanced data visualization and analysis, gaining hands-on expertise and unlocking the full potential of Power BI, Microsoft's powerful business analytics tool.</p>
                     </div>
                 </div>
                 <div class="card">
