--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Expertise</a></li>
-                <li><a href="#" class="menu-btn">Certificates</a></li>
-                <li><a href="#" class="menu-btn">Projects</a></li>
+                <li><a href="about.html" class="menu-btn">Certificates</a></li>
+                <li><a href="about.html" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
