--- a/index.html
+++ b/index.html
@@ -177,15 +177,15 @@
                 <div class="card">
                     <div class="box">
                         <img src="images.png" alt="">
-                        <div class="text">THE FINANCIAL LADDER</div>
+                        <div class="text">Lorem Epsum</div>
                         <p>Stock Market Training Institute Finance | Courses </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="Luke-Jackson-Clark.jpg" alt="">
-                        <div class="text">Luke-Jackson-Clark</div>
-                        <p>UK based Photographer and Director of @world.shooters</p>
+                        <div class="text">Lorem Epsum</div>
+                        <p>Lorem epsum iternoif udbu oiji keidj amet sit dolor elit.</p>
                     </div>
                 </div>
                 <!-- <div class="card">
