--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Microsoft Power BI</div>
-                        <p>Data science enthusiast Learning Power BI for advanced data visualization and analysis, gaining hands-on expertise and unlocking the full potential of Power BI, Microsoft's powerful business analytics tool.</p>
+                        <div class="text">Tableau</div>
+                        <p>Data science enthusiast Intermediate in Tableau and Tableau Prep Builder for advanced data visualization and analysis, gaining hands-on expertise and unlocking the full potential of Tableau, Salesforce's powerful data analytics tool.</p>
                     </div>
                 </div>
                 <div class="card">
