--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="box">
                         <img src="images.png" alt="">
                         <div class="text">Lorem Epsum</div>
-                        <p>Stock Market Training Institute Finance | Courses </p>
+                        <p>Lorem epsum descis embtarious iternoif ametws </p>
                     </div>
                 </div>
                 <div class="card">
