--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 <div class="card">
                     <div class="box">
                         <img src="Luke-Jackson-Clark.jpg" alt="">
-                        <div class="text">Lorem Epsum</div>
-                        <p>Lorem epsum iternoif udbu oiji keidj amet sit dolor elit.</p>
+                        <div class="text">VIBRANTA</div>
+                        <p>Founder and CEO of the Student Organisation Vibranta</p>
                     </div>
                 </div>
                 <!-- <div class="card">
