--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="Luke-Jackson-Clark.jpg" alt="">
+                        <img src="vibranta_cropped.png" alt="">
                         <div class="text">VIBRANTA</div>
                         <p>Founder and CEO of the Student Organisation Vibranta</p>
                     </div>
